[package]
name = "bookmark-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5"
indicatif = "0.17"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
